# fp-superpowers-in-practice

./: README.md  tasks.py
forms-validation-elm/: elm.json
forms-validation-elm/src/: Forms.elm  Validated.elm  index.js
ga-monoids-hs/: README.md  ga-monoids-hs.cabal  ga_sessions.json
ga-monoids-hs/src/: AddToCartRate.hs  GoogleAnalytics.hs  Main.hs
slides/: .gitignore  fp_superpowers.md  ga.json  package-lock.json  package.json
slides/css/: style.css
slides/js/: elm.js  preproc.js  script.js
validation-hs/: README.md  validation-hs.cabal
validation-hs/.stack-work/ghci/2b22f536/: cabal_macros.h
validation-hs/.stack-work/ghci/fb08aab3/: cabal_macros.h
validation-hs/.stack-work/install/x86_64-osx/lts-14.13/8.6.5/flag-cache/: Cabal-2.4.1.0-FXHHHyEWYz2E7OsBwlYDhf  StateVar-1.2-OvQScUJdslB4HgRfOXUfu  adjunctions-4.4-1QpkJRjnAlWA94juAnfobc  base-orphans-0.8.1-HeyTAcy4PKhDcGhjvJwDzq  bifunctors-5.5.5-6es87mnQPoNExwf3magcID  cabal-doctest-1.0.8-A2btrBKjG8ZH3c2yQNR7IT  call-stack-0.1.0-J1eWgTNOnM4IGVyeW0v2YZ  comonad-5.0.5-FVPlQ3vMIc47uubkmCYHT6  contravariant-1.5.2-4tubmgOpLIj5IwIaRQgygE  distributive-0.6.1-hrTE0VHa0tCGjG2DtSI37  exceptions-0.10.3-HxcogURuow4vEVQcMjJ2k  free-5.1.2-Jxe9H11XKiFKxPryLImadk  hashable-1.2.7.0-CWI8VZuQTAYWIQTQQtqCV  invariant-0.5.3-8J6ah3jgTWP2m8dZYZz6km  kan-extensions-5.2-I0maiKjR0ZMJQTa5DHQwwx  lens-4.17.1-GvUyXlqIqfnI3QR1W06Lc  parallel-3.2.2.0-EGl5SOk48TWHAD161C93aQ  parsec-3.1.14.0-8t8UKeFouAo5hdmomuIjPj  primitive-0.6.4.0-ILgywxtLpvnAOlEISPpP5b  profunctors-5.3-8dCZ39QUQPeJjeVUVVdqIK  (+14 more)
validation-hs/src/: Main.hs
