name:                ga-monoids-hs
version:             0.1.0.0
homepage:            https://github.com/githubuser/ga-monoids-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ga-monoids-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , aeson
                       , text
                       , bytestring
                       , generic-deriving
                       , aeson-pretty
                       , containers
                       , appendmap
                       , pretty-simple
                       , split
  other-modules:       GoogleAnalytics
                       , AddToCartRate